--- a/01-ex1.rmd
+++ b/01-ex1.rmd
@@ -12,22 +12,21 @@
 
 Table 1.1 below shows the data related to the grain yield in (g /plot) of a sorghum variety from experimental plots of equal area from a continuous frequency distribution. Prepare a frequency distribution and cumulative frequency distribution
 
-```{r echo=FALSE,warning=FALSE,results='asis'}
+```{r t11, echo=FALSE,warning=FALSE,results='asis'}
 library(knitr)
 library(kableExtra)
 dt<-read.csv("csv/freqdist.csv")
 dt %>%
-  kbl(caption = "Data for constructing Frequency distribution ",col.names = NULL) %>%
+  kbl(caption = "Frequency distribution ",col.names = NULL) %>%
   kable_paper("hover", full_width = F)
 
 ```
 [**SOLUTION**]{.ul}:  
 
 
-Number of Classes, *k* =1 + 3.322 log~10~*N* =
+Number of Classes, *k* =1 + 3.322 log~10~*N* =  
 
-Class width, C = \| max − min\|/ k = 
+Class width, C = \| max - min\|/ k =  
 
-Lower limit as 𝐿=𝑚𝑖𝑛− $\frac{c^{'} - k^{'} - (max - min)}{2}$ =
-
+Lower limit as L = min - $\frac{c^{'} - k^{'} - (max - min)}{2}$ =  
 
