--- a/02-ex2.Rmd
+++ b/02-ex2.Rmd
@@ -1,58 +1,59 @@
 # Exercise 2  
 ## Measures of Central Tendency  
+
 1. If the weights of 5 ear heads of sorghum are 100, 102, 118, 124 & 126, find the mean weight?  
 
 2. Calculate the mean value for the frequency distribution of weights of sorghum ear heads (Table 2.1)?  
-```{r echo=FALSE,warning=FALSE,results='asis'}
+```{r t1, echo=FALSE,warning=FALSE,results='asis'}
 library(knitr)
 library(kableExtra)
 dt<-read.csv("csv/meansorghum.csv")
 dt %>%
-  kbl(caption = "Data for mean calculation from frequency distribution",col.names = NULL) %>%
+  kbl(caption = "mean calculation",col.names = NULL) %>%
   kable_paper("hover", full_width = F)
 
 ```  
 3. If the weight of sorghum ear heads are 45, 60, 48, 100 & 65, find the median.  
 4. Find out the median and mode for the data in Table 2.1
 5. Calculate the mode value for the following frequency distribution (Table 2.2)
-```{r echo=FALSE,warning=FALSE,results='asis'}
+```{r t2, echo=FALSE,warning=FALSE,results='asis'}
 library(knitr)
 library(kableExtra)
 dt<-read.csv("csv/mode.csv")
 dt %>%
-  kbl(caption = "Data for mode calculation from frequency distribution",col.names = NULL) %>%
+  kbl(caption = "mode calculation",col.names = NULL) %>%
   kable_paper("hover", full_width = F)
 
 ```  
 6.  Find out the mean, median and mode for weekly wages of 100 workers in a farm  
-```{r echo=FALSE,warning=FALSE,results='asis'}
+```{r t3, echo=FALSE,warning=FALSE,results='asis'}
 library(knitr)
 library(kableExtra)
 dt<-read.csv("csv/wklywages.csv")
 dt %>%
-  kbl(caption = "weekly wages of 100 workers in a farm") %>%
+  kbl(caption = "weekly wages") %>%
   kable_paper("hover", full_width = F)
 
 ``` 
 7.  The following data gives number of flowers observed from 20 plants.Find the arithmetic mean, geometric mean, harmonic mean.  
 42, 88, 37, 75, 98, 93, 73, 62, 96, 80, 52, 76, 66, 54, 73, 69, 83, 62, 53, 79  
 8. Table 2.4 below gives the distribution of the heights of 60 students in a Senior High school. Find Q1 & Q3  
-```{r echo=FALSE,warning=FALSE,results='asis'}
+```{r t4, echo=FALSE,warning=FALSE,results='asis'}
 library(knitr)
 library(kableExtra)
 dt<-read.csv("csv/quartiles.csv")
 dt %>%
-  kbl(caption = "distribution of the heights of 60 students",col.names = NULL) %>%
+  kbl(caption = "height of students",col.names = NULL) %>%
   kable_paper("hover", full_width = F)
 
 ```  
 9. Find 𝑃25, 𝑃50& 𝑃75 and D5 and Q2 for the Table 2.5 given below
-```{r echo=FALSE,warning=FALSE,results='asis'}
+```{r t5, echo=FALSE,warning=FALSE,results='asis'}
 library(knitr)
 library(kableExtra)
 dt<-read.csv("csv/percentile.csv")
 dt %>%
-  kbl(caption = "Frequency data for percentile calculation") %>%
+  kbl(caption = "Frequency data") %>%
   kable_paper("hover", full_width = F)
 
 ```
