--- a/lecture_note.tex
+++ b/lecture_note.tex
@@ -187,7 +187,7 @@ Lower limit as L = min - \(\frac{c^{'} - k^{'} - (max - min)}{2}\) =
   \textbackslash begin\{table\}
 \end{enumerate}
 
-\caption{\label{tab:t1}mean calculation}
+\caption{\label{tab:t1}mean}
 \centering
 \begin{tabular}[t]{l|l|l|l|l|l|l|l|l}
 \hline
