--- a/02-ex2.Rmd
+++ b/02-ex2.Rmd
@@ -1,3 +1,8 @@
+---
+output:
+  pdf_document: default
+  html_document: default
+---
 # Exercise 2  
 ## Measures of Central Tendency  
 
@@ -9,9 +14,8 @@ library(knitr)
 library(kableExtra)
 dt<-read.csv("csv/meansorghum.csv")
 dt %>%
-  kbl(caption = "mean calculation",col.names = NULL) %>%
-  kable_paper("hover", full_width = F)
-
+  kbl(caption = "mean",col.names = NULL) %>%
+   kable_classic(full_width = F, html_font = "Cambria")
 ```  
 3. If the weight of sorghum ear heads are 45, 60, 48, 100 & 65, find the median.  
 4. Find out the median and mode for the data in Table 2.1
@@ -22,8 +26,7 @@ library(kableExtra)
 dt<-read.csv("csv/mode.csv")
 dt %>%
   kbl(caption = "mode calculation",col.names = NULL) %>%
-  kable_paper("hover", full_width = F)
-
+   kable_classic(full_width = F, html_font = "Cambria")
 ```  
 6.  Find out the mean, median and mode for weekly wages of 100 workers in a farm  
 ```{r t3, echo=FALSE,warning=FALSE,results='asis'}
@@ -32,8 +35,7 @@ library(kableExtra)
 dt<-read.csv("csv/wklywages.csv")
 dt %>%
   kbl(caption = "weekly wages") %>%
-  kable_paper("hover", full_width = F)
-
+  kable_classic(full_width = F, html_font = "Cambria")
 ``` 
 7.  The following data gives number of flowers observed from 20 plants.Find the arithmetic mean, geometric mean, harmonic mean.  
 42, 88, 37, 75, 98, 93, 73, 62, 96, 80, 52, 76, 66, 54, 73, 69, 83, 62, 53, 79  
@@ -44,7 +46,7 @@ library(kableExtra)
 dt<-read.csv("csv/quartiles.csv")
 dt %>%
   kbl(caption = "height of students",col.names = NULL) %>%
-  kable_paper("hover", full_width = F)
+   kable_classic(full_width = F, html_font = "Cambria")
 
 ```  
 9. Find 𝑃25, 𝑃50& 𝑃75 and D5 and Q2 for the Table 2.5 given below
@@ -54,6 +56,6 @@ library(kableExtra)
 dt<-read.csv("csv/percentile.csv")
 dt %>%
   kbl(caption = "Frequency data") %>%
-  kable_paper("hover", full_width = F)
+   kable_classic(full_width = F, html_font = "Cambria")
 
 ```
